cluster/apps/home/frigate/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frigate
  namespace: home
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
    hajimari.io/appName: "frigate"
    hajimari.io/enable: "true"
    hajimari.io/icon: "cctv"
    traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
    traefik.ingress.kubernetes.io/router.middlewares: "networking-internal-only@kubernetescrd"
spec:
  ingressClassName: "traefik"
  tls:
    - hosts:
        - "frigate.peanutbutterporkchop.com"
      secretName: "frigate-tls"
  rules:
    - host: "frigate.peanutbutterporkchop.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frigate
                port:
                  number: 5000
